[package]
name = "tile-editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1"
bevy_egui = "0.24.0"
egui_file = "0.13.0"
futures-lite = "2.1.0"
nom = "7.1.3"
ron = "0.8.1"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.51"
